--- a/_site.yml
+++ b/_site.yml
@@ -7,9 +7,8 @@ navbar:
       href: index.html
     - text: "Publications"
       href: publications.html
-    - text: "CV"
-      href: CV.html
 output:
   html_document:
     theme: paper
     css: style.css
+favicon: favicon.ico
