--- a/_site.yml
+++ b/_site.yml
@@ -11,5 +11,5 @@ output:
   html_document:
     includes:
       in_header: header.html
-    # theme: paper
-    # css: style.css
+    theme: paper
+    css: style.css
